allow configurable embedding models
